2005-03-17 15:47  antirez

	* ChangeLog, jim.c: Applied PATCH #389 "debug command is missing
	  NULL terminator in options :)" Thanks to Jaen Saul for report +
	  patch.

2005-03-17 14:06  antirez

	* ChangeLog, jim.c, jim.h: Objects hash function changed.

2005-03-17 08:40  antirez

	* ChangeLog, jim.c, jim.h: [source] command added.

2005-03-17 08:22  antirez

	* ChangeLog, Makefile, TODO, jim.c, jim.h: The interactive prompt
	  can now used to type/paste multi line scripts.  Every line is
	  appended to the previous until the script does not appear to be
	  complete (tested by Jim_IsScriptComplete()).

2005-03-16 17:28  antirez

	* ChangeLog, jim-aio.c, jim.c, jim.h: [env] modified to just be
	  able to read a specified var name form the environment, i.e. to
	  be ANSI-C.

	  Minor fix to AIO extension to use the new DelProc API.

2005-03-16 17:06  patthoyts

	* jim.c, jim.h: Added interpreter pointer to the command delete
	  proc.

2005-03-16 16:30  antirez

	* ChangeLog, jim.c: Added the [env] command

2005-03-16 14:35  antirez

	* ChangeLog, jim.c: added CVS ID info in the banner.

2005-03-16 14:11  antirez

	* ChangeLog, jim.c: more GC fixes.

2005-03-16 13:55  antirez

	* ChangeLog, jim.c: Fixed a bug introduced in the Gargage
	  Collection code some commit ago.

2005-03-15 22:58  antirez

	* ChangeLog, Makefile: clean target of Makefile now deletes .xo
	  files too.

2005-03-15 15:42  antirez

	* ChangeLog, jim.c, jim.h: A first version of [info complete].

2005-03-15 15:05  antirez

	* BUGS, ChangeLog, jim.c, test.tcl: [info level ?level?] fixed.
	  Tests uncommented.

2005-03-15 11:31  antirez

	* AUTHORS, ChangeLog: More credits in the AUTHORS file

2005-03-14 17:36  patthoyts

	* jim-win32.c: Added a bunch of cursor handling apis

2005-03-14 17:35  patthoyts

	* jim.c: const police

2005-03-14 15:39  antirez

	* ChangeLog, jim.c, jim.h: 'iterator' argument modified to 'iter'
	  for C++ STL safety.

2005-03-14 14:11  antirez
